# Custom-OpenGL-Engine

./: .gitignore  CMakeList  CMakeLists.txt  Clockclass.hpp  basewindow.hpp  camcontroller.hpp  camcontrolls.cpp  main.cpp  mainloop.hpp  mesh.hpp  meshdivider.hpp  noisegenerator.hpp  perlinnoisegenerator.hpp  perlinnoisetest.cpp  polarmesh.hpp  renderer.hpp  terminal.hpp  whatiwanttodo
3D_Engine/: Clockclass.hpp  README.md  camcontroller.hpp  main.cpp  mainloop.hpp  noisegenerator.hpp  polarmesh.hpp  renderer.hpp  terminal.hpp
3D_Engine/customheaders/: Clockclass.hpp  basewindow.hpp  camcontroller.hpp  camcontrolls.cpp  mesh.hpp  noisegenerator.hpp  pclock.hpp  perlinnoisegenerator.hpp  polarmesh.hpp  renderer.hpp  terminal.hpp
common/: controls.cpp  controls.hpp
